fix: Update all image references to use correct .jpg extensions and fix banner images in home messages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>MythicPvP | Premium Minecraft Network</title>
     <meta name="description" content="MythicPvP Minecraft server — play epic gamemodes, shop ranks, and join our Discord community." />
     <meta name="author" content="MythicPvP" />
-    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oxanium:wght@300;400;600;700&display=swap" rel="stylesheet" />
