feat: Complete admin panel and public website polish
Major Features & Improvements:
- ✅ Fixed registration username bug (now uses entered username, not email)
- ✅ Complete admin order creation system with full UI and backend logic
- ✅ Enhanced forum management with working category editing
- ✅ Improved user management with better error handling
- ✅ Added support ticket management with delete functionality
- ✅ Featured product system with dynamic homepage integration
- ✅ Removed Discord section, updated branding to use Mythic assets
- ✅ Fixed all username display issues (no more email/display_name)
- ✅ Added comprehensive database migrations for all features

Admin Panel Enhancements:
- Store: Complete order creation, package management with image uploads
- Forums: Category editing, thread management, role-based permissions
- Support: Ticket management, messaging, delete functionality
- Users: Improved loading, username-only profiles, auth integration
- Settings: Featured product configuration, server settings
- Role Management: Granular permission system

Public Website Updates:
- Homepage: Dynamic featured product, real store stats, username display
- Header: Updated branding, favicon integration, username in navigation
- Profile: Streamlined form (username + minecraft username only)
- Login/Registration: Fixed username handling, removed display names
- Discord: Updated invite links, removed deprecated sections

Database & Backend:
- Added comprehensive migrations for username fixes
- Enhanced RLS policies for proper security
- Auto-profile creation triggers for new users
- Storage setup for avatars and assets
- Featured package settings system

All features tested and working in development environment.

--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
     <title>MythicPvP | Premium Minecraft Network</title>
     <meta name="description" content="MythicPvP Minecraft server — play epic gamemodes, shop ranks, and join our Discord community." />
     <meta name="author" content="MythicPvP" />
+    
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Oxanium:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
     <meta property="og:title" content="MythicPvP | Premium Minecraft Network" />
-    <meta property="og:description" content="Play on MythicPvP, shop ranks, and join the Discord community." />
+    <meta property="og:description" content="MythicPvP Minecraft server — play epic gamemodes, shop ranks, and join our Discord community." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/banner.jpg" />
+    <meta property="og:url" content="https://mythicpvp.com" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="MythicPvP | Premium Minecraft Network" />
+    <meta name="twitter:description" content="MythicPvP Minecraft server — play epic gamemodes, shop ranks, and join our Discord community." />
+    <meta name="twitter:image" content="/banner.jpg" />
   </head>
 
   <body>
