feat: Complete MythicWebsite enhancement with image upload, store layout, and admin cleanup
- Added user-friendly image upload system for package management
- Restructured store page with categories sidebar and improved layout
- Implemented SimplifiedUserManagement to resolve 403 admin API errors
- Enhanced store management with file upload and payment configuration
- Removed unused admin components (old UserManagement, StoreManagement)
- Added comprehensive documentation and testing guides
- Fixed forum management and RLS policies
- Added payment system with Stripe/PayPal integration
- Improved admin panel security and functionality

Major Features:
✅ File upload for package images with Supabase Storage
✅ Category-based store navigation with color theming
✅ Admin panel cleanup and security improvements
✅ Enhanced payment system integration
✅ Comprehensive documentation suite

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <meta name="twitter:title" content="MythicPvP | Premium Minecraft Network" />
     <meta name="twitter:description" content="MythicPvP Minecraft server — play epic gamemodes, shop ranks, and join our Discord community." />
     <meta name="twitter:image" content="/banner.jpg" />
+    
+    <!-- Security Headers -->
+    <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
   </head>
 
   <body>
